Added support for phrases in CSS files. Add support for phrases in template files. Revamped every template to make them use phrases. Revamped every CSS file to make them use phrases.
Tweaked the contributing document.
We now use LogError instead of log.Fatal() in a few places to capture more stack traces.
Fixed the suffixes on the topic and post count pages, as they were saying views instead of posts / topics.
Split the paginator into it's own template.
Refactored the theme logic to defer loading the static files to a later stage.
Greatly improved the accessibility with a number of ARIA attributes in places where there were none.
Removed the edit-topic and page templates.
Renamed the panel-adminlogs template to panel_adminlogs.
Non-existent phrases used by transpiled templates should now be logged.
Fixed a bug where alertbox was plopped down multiple times on one page.
The phrase placeholders are more informative now.
Added the CurrentLanguagePackName and GetLanguagePackByName API functions.
Notices are now shown when you delete, update, or create a forum.

--- a/templates/account_own_edit_avatar.html
+++ b/templates/account_own_edit_avatar.html
@@ -3,7 +3,7 @@
 	{{template "account_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
-			<div class="rowitem"><h1>Edit Avatar</h1></div>
+			<div class="rowitem"><h1>{{lang "account_avatar_head"}}</h1></div>
 		</div>
 		<div class="colstack_item avatar_box">
 			<div class="rowitem"><img src="{{.CurrentUser.Avatar}}" height="128px" max-width="128px" /></div>
@@ -11,11 +11,11 @@
 		<div class="colstack_item the_form">
 			<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
 				<div class="formrow real_first_child">
-					<div class="formitem formlabel"><a>Upload Avatar</a></div>
+					<div class="formitem formlabel"><a>{{lang "account_avatar_upload_label"}}</a></div>
 					<div class="formitem"><input name="account-avatar" type="file" required /></div>
 				</div>
 				<div class="formrow">
-					<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
+					<div class="formitem"><button name="account-button" class="formbutton">{{lang "account_avatar_update_button"}}</button></div>
 				</div>
 			</form>
 		</div>
