--- a/templates/panel_modlogs.html
+++ b/templates/panel_modlogs.html
@@ -2,17 +2,17 @@
 <div class="colstack panel_stack">
 	<nav class="colstack_left" aria-label="The control panel menu">
 		<div class="colstack_item colstack_head submenu_fallback">
-			<div class="rowitem"><a href="/panel/logs/mod/">Logs</a></div>
+			<div class="rowitem"><a href="/panel/logs/mod/">{{lang "panel_logs_menu_head"}}</a></div>
 		</div>
 		<div class="colstack_item rowmenu submenu_fallback">
-			<div class="rowitem passive"><a href="/panel/logs/mod/">Moderation Logs</a></div>
-			{{if .CurrentUser.Perms.ViewAdminLogs}}<div class="rowitem passive"><a>Administration Logs</a></div>{{end}}
+			<div class="rowitem passive"><a href="/panel/logs/mod/">{{lang "panel_logs_menu_moderation"}}</a></div>
+			{{if .CurrentUser.Perms.ViewAdminLogs}}<div class="rowitem passive"><a>{{lang "panel_logs_menu_administration"}}</a></div>{{end}}
 		</div>
 {{template "panel-inner-menu.html" . }}
 	</nav>
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><h1>Moderation Logs</h1></div>
+			<div class="rowitem"><h1>{{lang "panel_logs_moderation_head"}}</h1></div>
 		</div>
 		<div id="panel_modlogs" class="colstack_item rowlist">
 			{{range .Logs}}
@@ -29,13 +29,7 @@
 			{{end}}
 		</div>
 		{{if gt .LastPage 1}}
-		<div class="pageset">
-			{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}" aria-label="Previous Page">Prev</a></div>{{end}}
-			{{range .PageList}}
-			<div class="pageitem"><a href="?page={{.}}" aria-label="Page {{.}}">{{.}}</a></div>
-			{{end}}
-			{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}" aria-label="Next Page">Next</a></div>{{end}}
-		</div>
+		{{template "paginator.html" . }}
 		{{end}}
 	</main>
 </div>
