--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -62,28 +62,28 @@ li a {
 }
 
 #menu_forums a:after {
-	content: "Forums";
+	content: "{{index .Phrases "menu_forums"}}";
 }
 .menu_topics a:after {
-	content: "Topics";
+	content: "{{index .Phrases "menu_topics"}}";
 }
 .menu_account a:after {
-	content: "Account";
+	content: "{{index .Phrases "menu_account"}}";
 }
 .menu_profile a:after {
-	content: "Profile";
+	content: "{{index .Phrases "menu_profile"}}";
 }
 .menu_panel a:after {
-	content: "Panel";
+	content: "{{index .Phrases "menu_panel"}}";
 }
 .menu_logout a:after {
-	content: "Logout";
+	content: "{{index .Phrases "menu_logout"}}";
 }
 .menu_login a:after {
-	content: "Login";
+	content: "{{index .Phrases "menu_login"}}";
 }
 .menu_register a:after {
-	content: "Register";
+	content: "{{index .Phrases "menu_register"}}";
 }
 
 .alert_bell:before {
@@ -467,10 +467,10 @@ li a {
 	white-space: nowrap;
 }
 .topic_list .lastReplyAt:before {
-	content: "Last: ";
+	content: "{{index .Phrases "topics_last"}}: ";
 }
 .topic_list .starter:before {
-	content: "Starter: ";
+	content: "{{index .Phrases "topics_starter"}}: ";
 }
 
 @supports not (display: grid) {
@@ -720,7 +720,7 @@ button.username {
 	content: "😀";
 }
 .like_count:after {
-	content: " up";
+	content: "{{index .Phrases "topic_gap_up"}}";
 }
 .edit_label:before {
 	content: "🖊️";
@@ -768,7 +768,7 @@ button.username {
 	font-weight: normal;
 }
 #profile_left_pane .report_item:after {
-	content: "Report";
+	content: "{{index .Phrases "topic_report_button_text"}}";
 }
 #profile_right_lane {
 	width: calc(100% - 230px);
@@ -962,28 +962,28 @@ input[type=checkbox]:checked + label.poll_option_label .sel {
 }
 
 .add_like:before {
-	content: "+1";
+	content: "{{index .Phrases "topic_plus_one"}}";
 }
 .button_container .open_edit:after, .edit_item:after {
-	content: "Edit";
+	content: "{{index .Phrases "topic_edit_button_text"}}";
 }
 .delete_item:after {
-	content: "Delete";
+	content: "{{index .Phrases "topic_delete_button_text"}}";
 }
 .lock_item:after {
-	content: "Lock";
+	content: "{{index .Phrases "topic_lock_button_text"}}";
 }
 .unlock_item:after {
-	content: "Unlock";
+	content: "{{index .Phrases "topic_unlock_button_text"}}";
 }
 .pin_item:after {
-	content: "Pin";
+	content: "{{index .Phrases "topic_pin_button_text"}}";
 }
 .unpin_item:after {
-	content: "Unpin";
+	content: "{{index .Phrases "topic_unpin_button_text"}}";
 }
 .report_item:after {
-	content: "Report";
+	content: "{{index .Phrases "topic_report_button_text"}}";
 }
 
 #poweredByHolder {
