--- a/templates/account_own_edit.html
+++ b/templates/account_own_edit.html
@@ -3,24 +3,24 @@
 	{{template "account_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
-			<div class="rowitem"><h1>Edit Password</h1></div>
+			<div class="rowitem"><h1>{{lang "account_password_head"}}</h1></div>
 		</div>
 		<div class="colstack_item the_form">
 			<form action="/user/edit/critical/submit/" method="post">
 				<div class="formrow real_first_child">
-					<div class="formitem formlabel"><a>Current Password</a></div>
+					<div class="formitem formlabel"><a>{{lang "account_password_current_password"}}</a></div>
 					<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" required /></div>
 				</div>
 				<div class="formrow">
-					<div class="formitem formlabel"><a>New Password</a></div>
+					<div class="formitem formlabel"><a>{{lang "account_password_new_password"}}</a></div>
 					<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" required /></div>
 				</div>
 				<div class="formrow">
-					<div class="formitem formlabel"><a>Confirm Password</a></div>
+					<div class="formitem formlabel"><a>{{lang "account_password_confirm_password"}}</a></div>
 					<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" required /></div>
 				</div>
 				<div class="formrow">
-					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
+					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">{{lang "account_password_update_button"}}</button></div>
 				</div>
 			</form>
 		</div>
