--- a/templates/account_own_edit_username.html
+++ b/templates/account_own_edit_username.html
@@ -3,20 +3,20 @@
 	{{template "account_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
-			<div class="rowitem"><h1>Edit Username</h1></div>
+			<div class="rowitem"><h1>{{lang "account_username_head"}}</h1></div>
 		</div>
 		<div class="colstack_item the_form">
 			<form action="/user/edit/username/submit/" method="post">
 				<div class="formrow real_first_child">
-					<div class="formitem formlabel"><a>Current Username</a></div>
+					<div class="formitem formlabel"><a>{{lang "account_username_current_username"}}</a></div>
 					<div class="formitem formlabel">{{.CurrentUser.Name}}</div>
 				</div>
 				<div class="formrow">
-					<div class="formitem formlabel"><a>New Username</a></div>
+					<div class="formitem formlabel"><a>{{lang "account_username_new_username"}}</a></div>
 					<div class="formitem"><input name="account-new-username" type="text" required /></div>
 				</div>
 				<div class="formrow">
-					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
+					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">{{lang "account_username_update_button"}}</button></div>
 				</div>
 			</form>
 		</div>
