--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,11 +2,11 @@
 	{{dock "footer" .Header }}
 	<div id="poweredByHolder" class="footerBit">
 		<div id="poweredBy">
-			<a id="poweredByName" href="https://github.com/Azareal/Gosora">Powered by Gosora</a><span id="poweredByDash"> - </span><span id="poweredByMaker">Made with love by Azareal</span>
+			<a id="poweredByName" href="https://github.com/Azareal/Gosora">{{lang "footer_powered_by"}}</a><span id="poweredByDash"> - </span><span id="poweredByMaker">{{lang "footer_made_with_love"}}</span>
 		</div>
 		<form action="/theme/" method="post">
 			<div id="themeSelector" style="float: right;">
-				<select id="themeSelectorSelect" name="themeSelector" aria-label="Change the site's appearance">
+				<select id="themeSelectorSelect" name="themeSelector" aria-label="{{lang "footer_theme_selector_aria"}}">
 				{{range .Header.Themes}}
     				{{if not .HideFromThemes}}<option val="{{.Name}}"{{if eq $.Header.Theme.Name .Name}} selected{{end}}>{{.FriendlyName}}</option>{{end}}
 				{{end}}
