--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 
-{{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" aria-label="Go to the previous page" rel="prev" href="/forum/{{.Forum.ID}}?page={{subtract .Page 1}}">&lt;</a></div>{{end}}
-{{if ne .LastPage .Page}}<div id="nextFloat" class="next_button"><a class="next_link" aria-label="Go to the next page" rel="next" href="/forum/{{.Forum.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
+{{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" aria-label="{{lang "paginator_prev_page_aria"}}" rel="prev" href="/forum/{{.Forum.ID}}?page={{subtract .Page 1}}">{{lang "paginator_less_than"}}</a></div>{{end}}
+{{if ne .LastPage .Page}}<div id="nextFloat" class="next_button"><a class="next_link" aria-label="{{lang "paginator_next_page_aria"}}" rel="next" href="/forum/{{.Forum.ID}}?page={{add .Page 1}}">{{lang "paginator_greater_than"}}</a></div>{{end}}
 
 <main id="forumItemList" itemscope itemtype="http://schema.org/ItemList">
 	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block{{if ne .CurrentUser.ID 0}} has_opt{{end}}">
@@ -12,12 +12,12 @@
 			<div class="optbox">
 				{{if .CurrentUser.Perms.CreateTopic}}
 				<div class="pre_opt auto_hide"></div>
-				<div class="opt create_topic_opt" title="Create Topic" aria-label="Create a topic"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
+				<div class="opt create_topic_opt" title="{{lang "topic_list_create_topic_tooltip"}}" aria-label="{{lang "topic_list_create_topic_aria"}}"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
 				{{/** TODO: Add a permissions check for this **/}}
-				<div class="opt mod_opt" title="Moderate">
-					<a class="moderate_link" href="#" aria-label="Moderate Posts"></a>
+				<div class="opt mod_opt" title="{{lang "topic_list_moderate_tooltip"}}">
+					<a class="moderate_link" href="#" aria-label="{{lang "topic_list_moderate_aria"}}"></a>
 				</div>
-				{{else}}<div class="opt locked_opt" title="You don't have the permissions needed to create a topic" aria-label="You don't have the permissions needed to make a topic in this forum"><a></a></div>{{end}}
+				{{else}}<div class="opt locked_opt" title="{{lang "forum_locked_tooltip"}}" aria-label="{{lang "forum_locked_aria"}}"><a></a></div>{{end}}
 			</div>
 			<div style="clear: both;"></div>
 		{{end}}
@@ -26,34 +26,34 @@
 	<div class="mod_floater auto_hide">
 		<form method="post">
 			<div class="mod_floater_head">
-				<span>What do you want to do with these 18 topics?</span>
+				<span>{{lang "topic_list_what_to_do"}}</span>
 			</div>
 			<div class="mod_floater_body">
 				<select class="mod_floater_options">
-					<option val="delete">Delete them</option>
-					<option val="lock">Lock them</option>
-					<option val="move">Move them</option>
+					<option val="delete">{{lang "topic_list_moderate_delete"}}</option>
+					<option val="lock">{{lang "topic_list_moderate_lock"}}</option>
+					<option val="move">{{lang "topic_list_moderate_move"}}</option>
 				</select>
-				<button>Run</button>
+				<button>{{lang "topic_list_moderate_run"}}</button>
 			</div>
 		</form>
 	</div>
 	{{if .CurrentUser.Perms.CreateTopic}}
-	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="Quick Topic Form">
+	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic_aria"}}">
 		<form id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
-		<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="Your Avatar" title="Your Avatar" />
+		<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="{{lang "quick_topic_avatar_alt"}}" title="{{lang "quick_topic_avatar_tooltip"}}" />
 		<input form="quick_post_form" id="topic_board_input" name="topic-board" value="{{.Forum.ID}}" type="hidden">
 		<div class="main_form">
 			<div class="topic_meta">
 				<div class="formrow topic_name_row real_first_child">
 					<div class="formitem">
-						<input form="quick_post_form" name="topic-name" placeholder="What's up?" required>
+						<input form="quick_post_form" name="topic-name" placeholder="{{lang "quick_topic_whatsup"}}" required>
 					</div>
 				</div>
 			</div>
 			<div class="formrow topic_content_row">
 				<div class="formitem">
-					<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
+					<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic_content_placeholder"}}" required></textarea>
 				</div>
 			</div>
 			<div class="formrow poll_content_row auto_hide">
@@ -63,20 +63,20 @@
 			</div>
 			<div class="formrow quick_button_row">
 				<div class="formitem">
-					<button form="quick_post_form" name="topic-button" class="formbutton">Create Topic</button>
-					<button form="quick_post_form" class="formbutton" id="add_poll_button">Add Poll</button>
+					<button form="quick_post_form" name="topic-button" class="formbutton">{{lang "quick_topic_create_topic_button"}}</button>
+					<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic_add_poll_button"}}</button>
 					{{if .CurrentUser.Perms.UploadFiles}}
 					<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
-					<label for="upload_files" class="formbutton add_file_button">Add File</label>
+					<label for="upload_files" class="formbutton add_file_button">{{lang "quick_topic_add_file_button"}}</label>
 					<div id="upload_file_dock"></div>{{end}}
-					<button class="formbutton close_form">Cancel</button>
+					<button class="formbutton close_form">{{lang "quick_topic_cancel_button"}}</button>
 				</div>
 			</div>
 		</div>
 	</div>
 	{{end}}
 	{{end}}
-	<div id="forum_topic_list" class="rowblock topic_list">
+	<div id="forum_topic_list" class="rowblock topic_list" aria-label="{{lang "forum_list_aria"}}">
 		{{range .ItemList}}<div class="topic_row" data-tid="{{.ID}}">
 		<div class="rowitem topic_left passive datarow {{if .Sticky}}topic_sticky{{else if .IsClosed}}topic_closed{{end}}">
 			<span class="selector"></span>
@@ -85,8 +85,8 @@
 				<a class="rowtopic" href="{{.Link}}" itemprop="itemListElement"><span>{{.Title}}</span></a>
 				<br /><a class="rowsmall starter" href="{{.Creator.Link}}">{{.Creator.Name}}</a>
 				{{/** TODO: Avoid the double '|' when both .IsClosed and .Sticky are set to true. We could probably do this with CSS **/}}
-				{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="Status: Closed"> | &#x1F512;&#xFE0E</span>{{end}}
-				{{if .Sticky}}<span class="rowsmall topic_status_e topic_status_sticky" title="Status: Pinned"> | &#x1F4CD;&#xFE0E</span>{{end}}
+				{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="{{lang "status_closed_tooltip"}}"> | &#x1F512;&#xFE0E</span>{{end}}
+				{{if .Sticky}}<span class="rowsmall topic_status_e topic_status_sticky" title="{{lang "status_pinned_tooltip"}}"> | &#x1F4CD;&#xFE0E</span>{{end}}
 			</span>
 			<span class="topic_inner_right rowsmall" style="float: right;">
 				<span class="replyCount">{{.PostCount}}</span><br />
@@ -100,20 +100,11 @@
 				<span class="rowsmall lastReplyAt">{{.RelativeLastReplyAt}}</span>
 			</span>
 		</div>
-		</div>{{else}}<div class="rowitem passive rowmsg">There aren't any topics in this forum yet.{{if .CurrentUser.Perms.CreateTopic}} <a href="/topics/create/{{.Forum.ID}}">Start one?</a>{{end}}</div>{{end}}
+		</div>{{else}}<div class="rowitem passive rowmsg">{{lang "forum_no_topics"}}{{if .CurrentUser.Perms.CreateTopic}} <a href="/topics/create/{{.Forum.ID}}">{{lang "forum_start_one"}}</a>{{end}}</div>{{end}}
 	</div>
 
 {{if gt .LastPage 1}}
-<div class="pageset">
-	{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}" rel="prev" aria-label="Go to the previous page">Prev</a></div>
-	<link rel="prev" href="?page={{subtract .Page 1}}" />{{end}}
-	{{range .PageList}}
-	<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
-	{{end}}
-	{{if ne .LastPage .Page}}
-	<link rel="next" href="?page={{add .Page 1}}" />
-	<div class="pageitem"><a href="?page={{add .Page 1}}" rel="next" aria-label="Go to the next page">Next</a></div>{{end}}
-</div>
+{{template "paginator.html" . }}
 {{end}}
 
 </main>
