--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,24 +3,24 @@
 	<div class="move_right">
 	<ul>{{/** Add a menu manager **/}}
 		<li id="menu_overview" class="menu_left"><a href="/" rel="home">{{.Header.Site.ShortName}}</a></li>
-		<li id="menu_forums" class="menu_left"><a href="/forums/" aria-label="The Forum list" title="Forum List"></a></li>
-		<li class="menu_left menu_topics"><a href="/" aria-label="The topic list" title="Topic List"></a></li>
+		<li id="menu_forums" class="menu_left"><a href="/forums/" aria-label="{{lang "menu_forums_aria"}}" title="{{lang "menu_forums_tooltip"}}"></a></li>
+		<li class="menu_left menu_topics"><a href="/" aria-label="{{lang "menu_topics_aria"}}" title="{{lang "menu_topics_tooltip"}}"></a></li>
 		<li id="general_alerts" class="menu_right menu_alerts">
 			<div class="alert_bell"></div>
-			<div class="alert_counter" aria-label="The number of alerts"></div>
+			<div class="alert_counter" aria-label="{{lang "menu_alert_counter_aria"}}"></div>
 			<div class="alert_aftercounter"></div>
-			<div class="alertList" aria-label="The alert list"></div>
+			<div class="alertList" aria-label="{{lang "menu_alert_list_aria"}}"></div>
 		</li>
 		{{if .CurrentUser.Loggedin}}
-		<li class="menu_left menu_account"><a href="/user/edit/critical/" aria-label="The account manager" title="Account Manager"></a></li>
-		<li class="menu_left menu_profile"><a href="{{.CurrentUser.Link}}" aria-label="Your profile" title="Your profile"></a></li>
-		<li class="menu_left menu_panel menu_account supermod_only"><a href="/panel/" aria-label="The Control Panel" title="Control Panel"></a></li>
-		<li class="menu_left menu_logout"><a href="/accounts/logout/?session={{.CurrentUser.Session}}" aria-label="Log out of your account" title="Logout"></a></li>
+		<li class="menu_left menu_account"><a href="/user/edit/critical/" aria-label="{{lang "menu_account_aria"}}" title="{{lang "menu_account_tooltip"}}"></a></li>
+		<li class="menu_left menu_profile"><a href="{{.CurrentUser.Link}}" aria-label="{{lang "menu_profile_aria"}}" title="{{lang "menu_profile_tooltip"}}"></a></li>
+		<li class="menu_left menu_panel menu_account supermod_only"><a href="/panel/" aria-label="{{lang "menu_panel_aria"}}" title="{{lang "menu_panel_tooltip"}}"></a></li>
+		<li class="menu_left menu_logout"><a href="/accounts/logout/?session={{.CurrentUser.Session}}" aria-label="{{lang "menu_logout_aria"}}" title="{{lang "menu_logout_tooltip"}}"></a></li>
 		{{else}}
-		<li class="menu_left menu_register"><a href="/accounts/create/" aria-label="Create a new account" title="Register"></a></li>
-		<li class="menu_left menu_login"><a href="/accounts/login/" aria-label="Login to your account" title="Login"></a></li>
+		<li class="menu_left menu_register"><a href="/accounts/create/" aria-label="{{lang "menu_register_aria"}}" title="{{lang "menu_register_tooltip"}}"></a></li>
+		<li class="menu_left menu_login"><a href="/accounts/login/" aria-label="{{lang "menu_login_aria"}}" title="{{lang "menu_login_tooltip"}}"></a></li>
 		{{end}}
-		<li class="menu_left menu_hamburger" title="Menu"><a></a></li>
+		<li class="menu_left menu_hamburger" title="{{lang "menu_hamburger_tooltip"}}"><a></a></li>
 	</ul>
 	</div>
 	</div>
