--- a/templates/panel-forum-edit-perms.html
+++ b/templates/panel-forum-edit-perms.html
@@ -4,7 +4,7 @@
 
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{.Name}} Forum</h1></div>
+		<div class="rowitem"><h1>{{.Name}}{{lang "panel_forum_head_suffix"}}</h1></div>
 	</div>
 	<form action="/panel/forums/edit/perms/adv/submit/{{.ForumID}}-{{.GroupID}}?session={{.CurrentUser.Session}}" method="post">
 		<div class="colstack_item rowlist formlist panel_forum_perms">
@@ -14,15 +14,15 @@
 					<a>{{.LangStr}}</a>
 					<div class="to_right">
 						<select name="forum-perm-{{.Name}}">
-							<option{{if .Toggle}} selected{{end}} value=1>Yes</option>
-							<option{{if not .Toggle}} selected{{end}} value=0>No</option>
+							<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+							<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
 						</select>
 					</div>
 				</div>
 			</div>
 			{{end}}
 			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">Update Forum</button></div>
+				<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_forum_update_button"}}</button></div>
 			</div>
 		</div>
 	</form>
