--- a/templates/panel-user-edit.html
+++ b/templates/panel-user-edit.html
@@ -4,25 +4,25 @@
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>User Editor</h1></div>
+		<div class="rowitem"><h1>{{lang "panel_user_head"}}</h1></div>
 	</div>
 	<div id="panel_user" class="colstack_item">
 		<form action="/panel/users/edit/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Name</a></div>
-			<div class="formitem"><input name="user-name" type="text" value="{{.Something.Name}}" placeholder="Jane Doe" /></div>
+			<div class="formitem formlabel"><a>{{lang "panel_user_name"}}</a></div>
+			<div class="formitem"><input name="user-name" type="text" value="{{.Something.Name}}" placeholder="{{lang "panel_user_name_placeholder"}}" /></div>
 		</div>
 		{{if .CurrentUser.Perms.EditUserPassword}}<div class="formrow">
-			<div class="formitem formlabel"><a>Password</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_user_password"}}</a></div>
 			<div class="formitem"><input name="user-password" type="password" placeholder="*****" /></div>
 		</div>{{end}}
 		{{if .CurrentUser.Perms.EditUserEmail}}<div class="formrow">
-			<div class="formitem formlabel"><a>Email</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_user_email"}}</a></div>
 			<div class="formitem"><input name="user-email" type="email" value="{{.Something.Email}}" placeholder="example@localhost" /></div>
 		</div>{{end}}
 		{{if .CurrentUser.Perms.EditUserGroup}}
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Group</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_user_group"}}</a></div>
 			<div class="formitem">
 				<select name="user-group">
 				{{range .ItemList}}<option {{if eq .ID $.Something.Group}}selected {{end}}value="{{.ID}}">{{.Name}}</option>{{end}}
@@ -30,7 +30,7 @@
 			</div>
 		</div>{{end}}
 		<div class="formrow">
-			<div class="formitem"><button name="panel-button" class="formbutton">Update User</button></div>
+			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_user_update_button"}}</button></div>
 		</div>
 		</form>
 	</div>
