--- a/templates/panel_backups.html
+++ b/templates/panel_backups.html
@@ -3,18 +3,18 @@
 	{{template "panel-menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><h1>Backups</h1></div>
+			<div class="rowitem"><h1>{{lang "panel_backups_head"}}</h1></div>
 		</div>
 		<div id="panel_backups" class="colstack_item rowlist">
 			{{range .Backups}}
 			<div class="rowitem panel_compactrow">
 				<span>{{.SQLURL}}</span>
 				<span class="panel_floater">
-					<a href="/panel/backups/{{.SQLURL}}" class="panel_tag panel_right_button">Download</a>
+					<a href="/panel/backups/{{.SQLURL}}" class="panel_tag panel_right_button">{{lang "panel_backups_download"}}</a>
 				</span>
 			</div>
 			{{else}}
-			<div class="rowitem rowmsg">There aren't any backups available at this time.</div>
+			<div class="rowitem rowmsg">{{lang "panel_backups_no_backups"}}</div>
 			{{end}}
 		</div>
 	</main>
