--- a/templates/panel_word_filters.html
+++ b/templates/panel_word_filters.html
@@ -4,7 +4,7 @@
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>Word Filters</h1></div>
+		<div class="rowitem"><h1>{{lang "panel_word_filters_head"}}</h1></div>
 	</div>
 	<div id="panel_word_filters" class="colstack_item rowlist">
 		{{range .Something}}
@@ -13,33 +13,33 @@
 			<span class="itemSeparator"></span>
 			<a data-field="replacement" data-type="text" class="editable_block panel_compacttext">{{.Replacement}}</a>
 			<span class="panel_buttons">
-				<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" aria-label="Edit Word Filter"></a>
-				<a class="panel_right_button" href="/panel/settings/word-filters/edit/submit/{{.ID}}"><button class='panel_tag submit_edit show_on_edit' type='submit'>Update</button></a>
-				<a href="/panel/settings/word-filters/delete/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" aria-label="Delete Word Filter"></a>
+				<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" aria-label="{{lang "panel_word_filters_edit_button_aria"}}"></a>
+				<a class="panel_right_button" href="/panel/settings/word-filters/edit/submit/{{.ID}}"><button class='panel_tag submit_edit show_on_edit' type='submit'>{{lang "panel_word_filters_update_button"}}</button></a>
+				<a href="/panel/settings/word-filters/delete/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" aria-label="{{lang "panel_word_filters_delete_button_aria"}}"></a>
 			</span>
 		</div>
 		{{else}}
 		<div class="rowitem editable_parent rowmsg">
-			<a>You don't have any word filters yet.</a>
+			<a>{{lang "panel_word_filters_no_filters"}}</a>
 		</div>
 		{{end}}
 	</div>
 
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>Add Filter</h1></div>
+		<div class="rowitem"><h1>{{lang "panel_word_filters_create_head"}}</h1></div>
 	</div>
 	<div class="colstack_item the_form">
 		<form action="/panel/settings/word-filters/create/?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
-				<div class="formitem formlabel"><a>Find</a></div>
-				<div class="formitem"><input name="find" type="text" placeholder="fuck" /></div>
+				<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_find"}}</a></div>
+				<div class="formitem"><input name="find" type="text" placeholder="{{lang "panel_word_filters_create_find_placeholder"}}" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem formlabel"><a>Replacement</a></div>
-				<div class="formitem"><input name="replacement" type="text" placeholder="fudge" /></div>
+				<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_replacement"}}</a></div>
+				<div class="formitem"><input name="replacement" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">Add Filter</button></div>
+				<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_word_filters_create_create_word_filter_button"}}</button></div>
 			</div>
 		</form>
 	</div>
