--- a/templates/topics.html
+++ b/templates/topics.html
@@ -2,17 +2,17 @@
 <main id="topicsItemList" itemscope itemtype="http://schema.org/ItemList">
 
 <div class="rowblock rowhead topic_list_title_block{{if ne .CurrentUser.ID 0}} has_opt{{end}}">
-	<div class="rowitem topic_list_title"><h1 itemprop="name">All Topics</h1></div>
+	<div class="rowitem topic_list_title"><h1 itemprop="name">{{lang "topics_head"}}</h1></div>
 	{{if ne .CurrentUser.ID 0}}
 		<div class="optbox">
 		{{if .ForumList}}
 			<div class="pre_opt auto_hide"></div>
-			<div class="opt create_topic_opt" title="Create Topic" aria-label="Create a topic"><a class="create_topic_link" href="/topics/create/"></a></div>
+			<div class="opt create_topic_opt" title="{{lang "topic_list_create_topic_tooltip"}}" aria-label="{{lang "topic_list_create_topic_aria"}}"><a class="create_topic_link" href="/topics/create/"></a></div>
 			{{/** TODO: Add a permissions check for this **/}}
-			<div class="opt mod_opt" title="Moderate">
-				<a class="moderate_link" href="#" aria-label="Moderate Posts"></a>
+			<div class="opt mod_opt" title="{{lang "topic_list_moderate_tooltip"}}">
+				<a class="moderate_link" href="#" aria-label="{{lang "topic_list_moderate_aria"}}"></a>
 			</div>
-			{{else}}<div class="opt locked_opt" title="You don't have the permissions needed to create a topic" aria-label="You don't have the permissions needed to make a topic anywhere"><a></a></div>{{end}}
+			{{else}}<div class="opt locked_opt" title="{{lang "topics_locked_tooltip"}}" aria-label="{{lang "topics_locked_aria"}}"><a></a></div>{{end}}
 		</div>
 		<div style="clear: both;"></div>
 	{{end}}
@@ -23,15 +23,15 @@
 <div class="mod_floater auto_hide">
 	<form method="post">
 	<div class="mod_floater_head">
-		<span>What do you want to do with these 18 topics?</span>
+		<span>{{lang "topic_list_what_to_do"}}</span>
 	</div>
 	<div class="mod_floater_body">
 		<select class="mod_floater_options">
-			<option val="delete">Delete them</option>
-			<option val="lock">Lock them</option>
-			<option val="move">Move them</option>
+			<option val="delete">{{lang "topic_list_moderate_delete"}}</option>
+			<option val="lock">{{lang "topic_list_moderate_lock"}}</option>
+			<option val="move">{{lang "topic_list_moderate_move"}}</option>
 		</select>
-		<button class="mod_floater_submit">Run</button>
+		<button class="mod_floater_submit">{{lang "topic_list_moderate_run"}}</button>
 	</div>
 	</form>
 </div>
@@ -43,7 +43,7 @@
 	<form action="/topic/move/submit/?session={{.CurrentUser.Session}}" method="post">
 		<input id="mover_fid" name="fid" value="0" type="hidden" />
 		<div class="pane_header">
-			<h3>Move these topics to?</h3>
+			<h3>{{lang "topic_list_move_head"}}</h3>
 		</div>
 		<div class="pane_body">
 			<div class="pane_table">
@@ -51,14 +51,14 @@
 			</div>
 		</div>
 		<div class="pane_buttons">
-			<button id="mover_submit">Move Topics</button>
+			<button id="mover_submit">{{lang "topic_list_move_button"}}</button>
 		</div>
 	</form>
 </div>
-<div class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="Quick Topic Form">
+<div class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic_aria"}}">
 	<form name="topic_create_form_form" id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
 	<input form="quick_post_form" id="has_poll_input" name="has_poll" value="0" type="hidden" />
-	<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="Your Avatar" title="Your Avatar" />
+	<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="{{lang "quick_topic_avatar_alt"}}" title="{{lang "quick_topic_avatar_tooltip"}}" />
 	<div class="main_form">
 		<div class="topic_meta">
 			<div class="formrow topic_board_row real_first_child">
@@ -68,13 +68,13 @@
 			</div>
 			<div class="formrow topic_name_row">
 				<div class="formitem">
-					<input form="quick_post_form" name="topic-name" placeholder="What's up?" required>
+					<input form="quick_post_form" name="topic-name" placeholder="{{lang "quick_topic_whatsup"}}" required>
 				</div>
 			</div>
 		</div>
 		<div class="formrow topic_content_row">
 			<div class="formitem">
-				<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
+				<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic_content_placeholder"}}" required></textarea>
 			</div>
 		</div>
 		<div class="formrow poll_content_row auto_hide">
@@ -82,26 +82,26 @@
 				<div class="pollinput" data-pollinput="0">
 					<input type="checkbox" disabled />
 					<label class="pollinputlabel"></label>
-					<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="Add new poll option" />
+					<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "quick_topic_add_poll_option"}}" />
 				</div>
 			</div>
 		</div>
 		<div class="formrow quick_button_row">
 			<div class="formitem">
-				<button form="quick_post_form" class="formbutton">Create Topic</button>
-				<button form="quick_post_form" class="formbutton" id="add_poll_button">Add Poll</button>
+				<button form="quick_post_form" class="formbutton">{{lang "quick_topic_create_topic_button"}}</button>
+				<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic_add_poll_button"}}</button>
 				{{if .CurrentUser.Perms.UploadFiles}}
 				<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
-				<label for="upload_files" class="formbutton add_file_button">Add File</label>
+				<label for="upload_files" class="formbutton add_file_button">{{lang "quick_topic_add_file_button"}}</label>
 				<div id="upload_file_dock"></div>{{end}}
-				<button class="formbutton close_form">Cancel</button>
+				<button class="formbutton close_form">{{lang "quick_topic_cancel_button"}}</button>
 			</div>
 		</div>
 	</div>
 </div>
 	{{end}}
 {{end}}
-<div id="topic_list" class="rowblock topic_list" aria-label="A list containing topics from every forum">
+<div id="topic_list" class="rowblock topic_list" aria-label="{{lang "topics_list_aria"}}">
 	{{range .TopicList}}<div class="topic_row" data-tid="{{.ID}}">
 	<div class="rowitem topic_left passive datarow {{if .Sticky}}topic_sticky{{else if .IsClosed}}topic_closed{{end}}">
 		<span class="selector"></span>
@@ -110,8 +110,8 @@
 			<a class="rowtopic" href="{{.Link}}" itemprop="itemListElement"><span>{{.Title}}</span></a> {{if .ForumName}}<a class="rowsmall parent_forum" href="{{.ForumLink}}">{{.ForumName}}</a>{{end}}
 			<br /><a class="rowsmall starter" href="{{.Creator.Link}}">{{.Creator.Name}}</a>
 			{{/** TODO: Avoid the double '|' when both .IsClosed and .Sticky are set to true. We could probably do this with CSS **/}}
-			{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="Status: Closed"> | &#x1F512;&#xFE0E</span>{{end}}
-			{{if .Sticky}}<span class="rowsmall topic_status_e topic_status_sticky" title="Status: Pinned"> | &#x1F4CD;&#xFE0E</span>{{end}}
+			{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="{{lang "status_closed_tooltip"}}"> | &#x1F512;&#xFE0E</span>{{end}}
+			{{if .Sticky}}<span class="rowsmall topic_status_e topic_status_sticky" title="{{lang "status_pinned_tooltip"}}"> | &#x1F4CD;&#xFE0E</span>{{end}}
 		</span>
 		<span class="topic_inner_right rowsmall" style="float: right;">
 			<span class="replyCount">{{.PostCount}}</span><br />
@@ -125,20 +125,11 @@
 			<span class="rowsmall lastReplyAt">{{.RelativeLastReplyAt}}</span>
 		</span>
 	</div>
-	</div>{{else}}<div class="rowitem passive rowmsg">There aren't any topics yet.{{if .CurrentUser.Perms.CreateTopic}} <a href="/topics/create/">Start one?</a>{{end}}</div>{{end}}
+	</div>{{else}}<div class="rowitem passive rowmsg">{{lang "topics_no_topics"}}{{if .CurrentUser.Perms.CreateTopic}} <a href="/topics/create/">{{lang "topics_start_one"}}</a>{{end}}</div>{{end}}
 </div>
 
 {{if gt .LastPage 1}}
-<div class="pageset">
-	{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}" rel="prev" aria-label="Go to the previous page">Prev</a></div>
-	<link rel="prev" href="?page={{subtract .Page 1}}" />{{end}}
-	{{range .PageList}}
-	<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
-	{{end}}
-	{{if ne .LastPage .Page}}
-	<link rel="next" href="?page={{add .Page 1}}" />
-	<div class="pageitem"><a href="?page={{add .Page 1}}" rel="next" aria-label="Go to the next page">Next</a></div>{{end}}
-</div>
+{{template "paginator.html" . }}
 {{end}}
 
 </main>
