--- a/themes/tempra-conflux/public/panel.css
+++ b/themes/tempra-conflux/public/panel.css
@@ -7,10 +7,10 @@
 }
 
 .edit_button:before {
-	content: "Edit";
+	content: "{{index .Phrases "panel_edit_button_text"}}";
 }
 .delete_button:after {
-	content: "Delete";
+	content: "{{index .Phrases "panel_delete_button_text"}}";
 }
 
 .panel_upshift:visited {
@@ -69,31 +69,31 @@
 	color: #202020 !important;
 	font-size: 11px;
 }
-.panel_rank_tag_admin:before { content: "Admins"; }
-.panel_rank_tag_mod:before { content: "Mods"; }
-.panel_rank_tag_banned:before { content: "Banned"; }
-.panel_rank_tag_guest:before { content: "Guests"; }
-.panel_rank_tag_member:before { content: "Members"; }
+.panel_rank_tag_admin:before { content: "{{index .Phrases "panel_rank_admins"}}"; }
+.panel_rank_tag_mod:before { content: "{{index .Phrases "panel_rank_mods"}}"; }
+.panel_rank_tag_banned:before { content: "{{index .Phrases "panel_rank_banned"}}"; }
+.panel_rank_tag_guest:before { content: "{{index .Phrases "panel_rank_guests"}}"; }
+.panel_rank_tag_member:before { content: "{{index .Phrases "panel_rank_members"}}"; }
 
-.forum_preset_announce:after { content: "Announcements"; }
-.forum_preset_members:after { content: "Member Only"; }
-.forum_preset_staff:after { content: "Staff Only"; }
-.forum_preset_admins:after { content: "Admin Only"; }
-.forum_preset_archive:after { content: "Archive"; }
-.forum_preset_all:after { content: "Public"; }
+.forum_preset_announce:after { content: "{{index .Phrases "panel_preset_announcements"}}"; }
+.forum_preset_members:after { content: "{{index .Phrases "panel_preset_member_only"}}"; }
+.forum_preset_staff:after { content: "{{index .Phrases "panel_preset_staff_only"}}"; }
+.forum_preset_admins:after { content: "{{index .Phrases "panel_preset_admin_only"}}"; }
+.forum_preset_archive:after { content: "{{index .Phrases "panel_preset_archive"}}"; }
+.forum_preset_all:after { content: "{{index .Phrases "panel_preset_public"}}"; }
 .forum_preset_custom, .forum_preset_ { display: none !important; }
-.forum_active_Hide:before { content: "Hidden"; }
+.forum_active_Hide:before { content: "{{index .Phrases "panel_active_hidden"}}"; }
 .forum_active_Hide + .forum_preset:before { content: " | "; }
 .forum_active_Show { display: none !important; }
 .forum_active_name { color: #707070; }
 .builtin_forum_divider { border-bottom-style: solid; }
 
-.perm_preset_no_access:before { content: "No Access"; color: maroon; }
-.perm_preset_read_only:before { content: "Read Only"; color: green; }
-.perm_preset_can_post:before { content: "Can Post"; color: green; }
-.perm_preset_can_moderate:before { content: "Can Moderate"; color: darkblue; }
-.perm_preset_custom:before { content: "Custom"; color: black; }
-.perm_preset_default:before { content: "Default"; }
+.perm_preset_no_access:before { content: "{{index .Phrases "panel_perms_no_access" }}"; color: maroon; }
+.perm_preset_read_only:before { content: "{{index .Phrases "panel_perms_read_only" }}"; color: green; }
+.perm_preset_can_post:before { content: "{{index .Phrases "panel_perms_can_post" }}"; color: green; }
+.perm_preset_can_moderate:before { content: "{{index .Phrases "panel_perms_can_moderate" }}"; color: darkblue; }
+.perm_preset_custom:before { content: "{{index .Phrases "panel_perms_custom" }}"; color: black; }
+.perm_preset_default:before { content: "{{index .Phrases "panel_perms_default" }}"; }
 
 .theme_row > .panel_floater > .panel_right_button { margin-left: 5px; }
 
