--- a/themes/tempra-simple/public/panel.css
+++ b/themes/tempra-simple/public/panel.css
@@ -3,10 +3,10 @@
 }
 
 .edit_button:before {
-	content: "Edit";
+	content: "{{index .Phrases "panel_edit_button_text"}}";
 }
 .delete_button:after {
-	content: "Delete";
+	content: "{{index .Phrases "panel_delete_button_text"}}";
 }
 
 .tag-mini {
@@ -90,28 +90,28 @@
 }
 
 .perm_preset_no_access:before {
-	content: "No Access";
+	content: "{{index .Phrases "panel_perms_no_access" }}";
 	color: maroon;
 }
 .perm_preset_read_only:before, .perm_preset_can_post:before {
 	color: green;
 }
 .perm_preset_read_only:before {
-	content: "Read Only";
+	content: "{{index .Phrases "panel_perms_read_only" }}";
 }
 .perm_preset_can_post:before {
-	content: "Can Post";
+	content: "{{index .Phrases "panel_perms_can_post" }}";
 }
 .perm_preset_can_moderate:before {
-	content: "Can Moderate";
+	content: "{{index .Phrases "panel_perms_can_moderate" }}";
 	color: darkblue;
 }
 .perm_preset_custom:before {
-	content: "Custom";
+	content: "{{index .Phrases "panel_perms_custom" }}";
 	color: black;
 }
 .perm_preset_default:before {
-	content: "Default";
+	content: "{{index .Phrases "panel_perms_default" }}";
 }
 
 #panel_dashboard_right .colstack_head {
